[Fix] fix Navbar, Landing, and Contact

--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.5.3",
     "remixicon": "^4.8.0",
+    "tsparticles": "^2.12.0",
     "typeit": "^8.8.7"
   },
   "devDependencies": {
